@@ -4,6 +4,7 @@
     <option name="VM_PARAMETERS" value=" -Xms128m -Xmx512m -XX:MaxPermSize=250m -XX:ReservedCodeCacheSize=64m -ea -Duser.language=en -Duser.country=US" />
     <option name="PROGRAM_PARAMETERS" value="" />
     <alternative-path path="$KALISTICK_TECHBOX_DIR$/java/tools/IntellijIDEA-12" alternative-path-enabled="false" />
+    <log_file path="$USER_HOME$/config/IntelliJIdea-plugins/system/plugins-sandbox/system/log/idea.log" checked="false" skipped="true" show_all="false" alias="IDEA LOG" />
     <RunnerSettings RunnerId="Debug">
       <option name="DEBUG_PORT" value="" />
       <option name="TRANSPORT" value="0" />
